@@ -1,3 +1,9 @@
+2003-12-12  Jani Monoses <jani@iv.ro>
+
+	* src/net/tcp.c: Cancel retransmission timer when SYN is acked
+	otherwise an open active connection which doesn't send data
+	eventually resends the SYN resulting in reset from the peer.
+
 2003-12-08  Gary Thomas  <gary@mlbassoc.com>
 
 	* cdl/redboot.cdl: Better handling of GDB stubs support.  This
